CONTINUE Start sending ZoneEvent on the stream